test/type/wrong/overlap1.kk
// test overlap error
function f( x : int, y : int ) { x }
function f( x : int, y : int ) { x }

